@@ -397,7 +397,8 @@ yes() for ((;;)); do print y; done
 
 # The test for SIGBUS trap handling below is incompatible with ASan because ASan
 # implements its own SIGBUS handler independently of ksh.
-if ! [[ -v ASAN_OPTIONS || -v TSAN_OPTIONS || -v MSAN_OPTIONS || -v LSAN_OPTIONS ]]; then
+# Also, Android does not allow ignoring SIGBUS.
+if ! [[ -v ASAN_OPTIONS || -v TSAN_OPTIONS || -v MSAN_OPTIONS || -v LSAN_OPTIONS || $HOSTTYPE == android.* ]]; then
 	trap '' SIGBUS
 	got=$("$SHELL" -c 'trap date SIGBUS; trap -p SIGBUS')
 	[[ "$got" ]] && err_exit 'SIGBUS should not have a trap' \
