@@ -2,6 +2,13 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2024-11-15:
+
+- On Android 14 (Termux), the -a option to the 'exec' command is ineffective
+  because the OS disallows changing $0 (which is argv[0] in C). ksh now
+  detects this condition at compile time and, if detected, makes 'exec' print
+  a warning if -a is used, instead of silently failing to set argument zero.
+
 2024-11-14:
 
 - Fixed a crash in option parsing upon encountering an option value to a
